--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
+  "homepage": "https://atharvad17.github.io/shashikala_foundation",
   "name": "testproject",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "start": "serve -s dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "serve -s dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^2.8.0",
