--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "stripe": "^16.12.0"
   },
